Fix the image on mobile

--- a/static/style.scss
+++ b/static/style.scss
@@ -51,8 +51,14 @@ section.box {
 
 .image img {
   display: block;
-  max-width: 15em;
-  max-height: 20em;
+  @media screen and (min-width: 768px) {
+    max-width: 15em;
+    max-height: 20em;
+  }
+  @media not screen and (min-width: 768px) {
+    max-width: 100%;
+    max-height: 100%;
+  }
   width: auto;
   height: auto;
   margin: auto;
